--- a/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
@@ -125,7 +125,7 @@
                     <h5 *ngIf="rowData===null || rowData==undefined">Paired Box And Smartcard List
                     </h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" 
                     rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
                 </ag-grid-angular>
