--- a/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/add-lco/add-lco.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/add-lco/add-lco.component.html
@@ -43,7 +43,7 @@
                 <div class="head d-flex justify-content-center align-items-center mb-3">
                     <h6>AVAILABLE PRODUCT FOR MEMBERSHIP</h6>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='normal'
                     [rowSelection]="rowSelection" class="ag-theme-alpine table-class" rowAnimation
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" (selectionChanged)="onSelectionChanged()"
                     (gridReady)="onGridReady($event)" [rowData]="rowData" [enableCellTextSelection]="true">
@@ -53,7 +53,7 @@
         <div class="col d-flex justify-content-center align-items-center mb-3">
             <hr>
             <div class="form-group d-flex justify-content-center align-items-center mb-3 ">
-                <button type="button" class="btn btn-success me-2" (click)="createCommission()">Create</button>
+                <button type="button" class="btn btn-success me-2" [disabled]="!isDisCommission" (click)="createCommission()">Create</button>
                 <button type="button" class="btn btn-danger" (click)="onNoClick()">Cancel</button>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 <div class="head d-flex justify-content-center align-items-center mb-3">
                     <h6>AVAILABLE PRODUCT FOR MEMBERSHIP</h6>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='normal'
                     [rowSelection]="rowSelection" class="ag-theme-alpine table-class" rowAnimation
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs1" (selectionChanged)="onSelectionChanged()"
                     (gridReady)="onGridReady($event)" [rowData]="rowData" [enableCellTextSelection]="true">
@@ -115,7 +115,7 @@
         <div class="col d-flex justify-content-center align-items-center mb-3">
             <hr>
             <div class="form-group d-flex justify-content-center align-items-center mb-3 ">
-                <button type="button" class="btn btn-success me-2" (click)="createDisCommission()">Create</button>
+                <button type="button" class="btn btn-success me-2" [disabled]="!isDisCommission" (click)="createDisCommission()">Create</button>
                 <button type="button" class="btn btn-danger" (click)="onNoClick()">Cancel</button>
             </div>
         </div>
