--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/new-recharge/new-recharge.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/new-recharge/new-recharge.component.html
@@ -1,11 +1,11 @@
-<div class="card">
-    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-        <h6>CREATE NEW RECHARGE </h6>
-        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
-    </div>
+<div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+    <h6>CREATE NEW RECHARGE </h6>
+    <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+</div>
+<div class="">
     <div class="display justify-content-center align-items-center mobile">
         <form action="" [formGroup]="form">
-            <div class="col-12 col-md-12 " style="padding: 1rem;max-height: 700px;overflow: scroll;">
+            <div class="col-12 col-md-12 " >
                 <div class="input-box">
                     <div class="mb-3 edit">
                         <div class="col-12 col-md-6">
