--- a/src/app/admin/features/channel_setting/_Dialogue/broad-create-dialog/broad-create-dialog.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/broad-create-dialog/broad-create-dialog.component.html
@@ -1,9 +1,9 @@
-<div class="col d-flex justify-content-center align-items-center card transparent-background dialog-content">
+<div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+    <h6 >CREATE NEW BROADCASTER</h6>
+    <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+</div>
+<div class="col d-flex justify-content-center align-items-center  transparent-background dialog-content">
     <div class="card-content ">
-        <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-            <h6 >CREATE NEW BROADCASTER</h6>
-            <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
-        </div>
         <div class="card-body" style="padding: 2rem;">
             <div class="input_box display align-items-center mb-3" style="padding: 1rem;">
                 <div class="col-12 col-md-6">
