--- a/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/add-ltb/add-ltb.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/add-ltb/add-ltb.component.html
@@ -1,5 +1,4 @@
 <div>
-
     <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
         <h6>ADD LTB</h6>
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
@@ -72,40 +71,34 @@
                 </div>
                 <div style="padding: 0.6rem;">
                     <div class="col-12 display justify-content-center align-items-center">
-                      <div class="col-12 col-md-6 d-flex justify-content-start align-items-center">
-                        <span>Email</span>
-                      </div>
-                      <div class="col-12 col-md-6">
-                        <div>
-                          <input
-                            type="email"
-                            
-                            formControlName="email"
-                            placeholder="Ex: 123@gmail.com"
-                            [ngClass]="{
+                        <div class="col-12 col-md-6 d-flex justify-content-start align-items-center">
+                            <span>Email</span>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div>
+                                <input type="email" formControlName="email" placeholder="Ex: 123@gmail.com" [ngClass]="{
                               'is-valid': form.get('email')?.valid && (form.get('email')?.touched || submitted),
                               'is-invalid': form.get('email')?.invalid && (form.get('email')?.touched || submitted)
-                            }"
-                            required
-                          />
-                          <div *ngIf="form.get('email')?.invalid && (form.get('email')?.touched || submitted)" class="error-message">
-                            <div *ngIf="form.get('email')?.hasError('required')">
-                              Email is required.
+                            }" required />
+                                <div *ngIf="form.get('email')?.invalid && (form.get('email')?.touched || submitted)"
+                                    class="error-message">
+                                    <div *ngIf="form.get('email')?.hasError('required')">
+                                        Email is required.
+                                    </div>
+                                    <div
+                                        *ngIf="!form.get('email')?.hasError('required') && form.get('email')?.hasError('email')">
+                                        Please enter a valid email format (e.g., example@gmail.com).
+                                    </div>
+                                    <div
+                                        *ngIf="!form.get('email')?.hasError('required') && !form.get('email')?.hasError('email') && form.get('email')?.hasError('invalidEmail')">
+                                        Email must end with ".in" or ".com".
+                                    </div>
+                                </div>
                             </div>
-                            <div *ngIf="!form.get('email')?.hasError('required') && form.get('email')?.hasError('email')">
-                              Please enter a valid email format (e.g., example@gmail.com).
-                            </div>
-                            <div
-                              *ngIf="!form.get('email')?.hasError('required') && !form.get('email')?.hasError('email') && form.get('email')?.hasError('invalidEmail')"
-                            >
-                              Email must end with ".in" or ".com".
-                            </div>
-                          </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                  
+                </div>
+
                 <div class="" style="padding: 0.6rem;">
                     <div class="col-12 display justify-content-center align-items-center">
                         <div class="col-12 col-md-6 d-flex justify-content-start align-items-center">
@@ -164,17 +157,17 @@
                         </div>
                         <div class="col-6">
                             <div class="">
-                                <input type="text" formControlName="pincode" placeholder="Enter pincode"
-                                maxlength="6" (keypress)="onKeydown($event)"
+                                <input type="text" formControlName="pincode" placeholder="Enter pincode" maxlength="6"
+                                    (keypress)="onKeydown($event)"
                                     [ngClass]="{ 'is-invalid': submitted && f['pincode'].errors }" required>
-                                    <div *ngIf="submitted && f['pincode'].errors" style="font-size: 11px;">
-                                        <div *ngIf="f['pincode'].errors['required']" class="text-danger">
-                                          Pincode is required.
-                                        </div>
-                                        <div *ngIf="f['pincode'].errors['pattern']" class="text-danger">
-                                          Please enter a valid 6-digit pincode.
-                                        </div>
-                                      </div>
+                                <div *ngIf="submitted && f['pincode'].errors" style="font-size: 11px;">
+                                    <div *ngIf="f['pincode'].errors['required']" class="text-danger">
+                                        Pincode is required.
+                                    </div>
+                                    <div *ngIf="f['pincode'].errors['pattern']" class="text-danger">
+                                        Please enter a valid 6-digit pincode.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
