--- a/src/app/admin/features/channel_setting/channel/channel.component.html
+++ b/src/app/admin/features/channel_setting/channel/channel.component.html
@@ -49,8 +49,9 @@
     <div class="row">
         <div class="col-12 col-sm-12  m-3">
             <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
-            style="max-height: 590px;overflow: scroll;overflow-x: hidden;"  rowAnimation [rowSelection]="rowSelection"
-                [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
+                [style.height]="rowData && rowData.length > 0 ? '500px' : '250px'"
+                style="overflow: scroll; overflow-y: hidden; overflow-x: hidden;" rowAnimation
+                [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                 (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                 [enableCellTextSelection]="true">
             </ag-grid-angular>
