--- a/src/app/admin/features/channel_setting/distributor-master/distributor-master.component.html
+++ b/src/app/admin/features/channel_setting/distributor-master/distributor-master.component.html
@@ -21,7 +21,7 @@
                     </button>
                 </div>
                 <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
-                    style="max-height: 590px;overflow: scroll;overflow-x: hidden;" rowAnimation
+                    style="max-height: 590px;overflow: scroll;" rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                     [enableCellTextSelection]="true">
