--- a/src/app/admin/features/operator/operator-details/operator-details.component.html
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.html
@@ -266,8 +266,8 @@
         <!-- </div> -->
     </div>
     <div class="d-flex justify-content-center align-items-center" style="padding: 0.5rem;">
-        <mat-paginator [length]="totalLength" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 50]"
+        <mat-paginator [length]="totalLength" [pageSize]="pageSize" [pageSizeOptions]="[10,50,100,500,1000,2500]"
             (page)="onPageChange($event)">
         </mat-paginator>
     </div>
-</div>
+</div>  
