--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -155,7 +155,7 @@
                     <div class="col-12 col-md-12 ">
                         <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                             style="max-height: 300px;overflow: scroll;" rowAnimation [gridOptions]="gridOptions2"
-                            [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
+                            [columnDefs]="columnDefs" [rowData]="rowData" >
                         </ag-grid-angular>
                     </div>
                 </div>
@@ -405,7 +405,8 @@
                             </div>
 
                             <div class="col-12 col-md-12 display_btn1">
-                                <div *ngIf="isSendDeleteMessage === false" class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
+                                <div *ngIf="isSendDeleteMessage === false"
+                                    class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <!-- <button class="btn  d-flex justify-content-between" [disabled]="isSendDeleteMessage"
                                         (click)="openDialog('sendmessage','')">
                                         <i class="fa-solid fa-message"></i><span>Send Message</span></button> -->
@@ -413,9 +414,10 @@
                                         (click)="openDialog('sendmessage','')">
                                         <i class="fa-solid fa-message"></i><span>Send Message</span></button>
                                 </div>
-                                <div *ngIf="isSendDeleteMessage === true" class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
-                                    <button class="btn  d-flex justify-content-between"
-                                        [disabled]="deletemessage" (click)="openDialog('deletemessage','')">
+                                <div *ngIf="isSendDeleteMessage === true"
+                                    class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
+                                    <button class="btn  d-flex justify-content-between" [disabled]="deletemessage"
+                                        (click)="openDialog('deletemessage','')">
                                         <i class="fas fa-trash"></i><span>Delete Message</span></button>
                                     <!-- <button class="btn  d-flex justify-content-between"
                                         [disabled]="!isSendDeleteMessage" (click)="openDialog('deletemessage','')">
@@ -431,7 +433,7 @@
                             </div>
                             <div class="col-12 col-md-12 display_btn1">
 
-                               
+
                                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="boxchange"
                                         (click)="openLoginPage('boxchange')"><i class="fa-solid fa-share"></i><span>Box
@@ -447,7 +449,7 @@
                             <div class="col-12 col-md-12 display_btn1">
 
                                 <!-- *ngIf="suspend" -->
-                               
+
                                 <!-- *ngIf="suspend" -->
                                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="resumechange"
@@ -462,7 +464,7 @@
 
                             </div>
                             <div class="col-12 col-md-12 display_btn1">
-                           
+
                                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="forcetuning"
                                         (click)="openDialog('forcetuning','')"> <i
@@ -479,13 +481,13 @@
 
                             <div class="col-12 col-md-12 display_btn1">
                                 <!-- <div -->
-                            
+
                                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center  text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="pair"
                                         (click)="pairDialogue('pair')">
                                         <i class="fa fa-refresh"></i><span>Pair</span></button>
                                 </div>
-                    
+
                                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center text3">
                                     <button class="btn  d-flex justify-content-between" [disabled]="cancelsubscription"
                                         (click)="managePackage('cancelsubscription')">
@@ -500,7 +502,7 @@
                                         <i class="fa-solid fa-ban" style="font-size:15px;color: #090f13;"></i><span
                                             style="font-size:15px;color: #090f13;">Block</span></button>
                                 </div>
-                             
+
                             </div>
                         </div>
                     </div>
@@ -562,14 +564,14 @@
                         <div class="input_box col-12 col-md-9">
                             <div class=" display_tab justify-content-start align-items-center">
                                 <div class="col-12 col-md-4 display justify-content-start align-items-center mb-3">
-                                    <div class="col-12 col-md-6">
+                                    <!-- <div class="col-12 col-md-6">
                                         <span for="">Recharge TYPE
                                         </span>
-                                    </div>
-                                    <div class="col-12 col-md-6">
+                                    </div> -->
+                                    <div class="col-12 col-md-12">
                                         <select [(ngModel)]="selectedRechargetype"
                                             (ngModelChange)="onSelectionrechargetype($event)">
-                                            <option value="0" selected>Selected Recharge</option>
+                                            <option value="0" selected>Selected Recharge Type</option>
                                             <option *ngFor="let rt of rechargetype" [value]="rt.id">
                                                 {{rt.name}}
                                             </option>
@@ -662,8 +664,7 @@
                                                 <div class="input_box col-6 col-md-6">
                                                     <span class="me-2">Customer pay </span>
                                                 </div>
-                                                <div
-                                                    class="col-6 col-md-6 display justify-content-start align-items-center toggle">
+                                                <div class="col-6 col-md-6 display justify-content-start align-items-center toggle">
                                                     <div class="can-toggle">
                                                         <input id="a" type="checkbox" [(ngModel)]="iscollected"
                                                             (change)="onBillTypeChange()">
@@ -678,7 +679,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div *ngIf="managePackagetable">
+                            <div *ngIf="managePackagetable" class="confirmation-dialog">
                                 <div class=" d-flex justify-content-start align-item-center  mb-2">
                                     <button *ngIf="!confirmation" type="button" class="btn2 confirm me-2 bttn"
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
@@ -688,14 +689,14 @@
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
                                         [disabled]="isDisabled"
                                         (click)="rechargetoggleConfirmation1()">Confirmation</button>
-                                    <button type="button" class="btn2  recharge bttn" [disabled]="isRecharge"
+                                    <button type="button" class="btn2  recharge bttn me-2" [disabled]="isRecharge"
                                         [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
                                         (click)="recharge1()">Recharge</button>
-                                    <!-- <button type="button" class="btn2  recharge" (click)="recharge()"
-                                        [disabled]="!isConfirmationComplete">Recharge</button> -->
+                                    <button *ngIf="cancel_btn" type="button" class="btn2 bttn "
+                                        style="background-color: red;" (click)="toggleConfirmation()">Cancel</button>
                                 </div>
                             </div>
-                            <div *ngIf="managePackagetable1">
+                            <div *ngIf="managePackagetable1" class="confirmation-dialog"> 
                                 <div class=" d-flex justify-content-start align-item-center  mb-2">
                                     <button *ngIf="!confirmation" type="button" class="btn2 confirm me-2 bttn"
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
@@ -705,9 +706,11 @@
                                         [ngStyle]="{'background': isDisabled ? 'rgb(226 176 110)' : 'rgb(243, 146, 19)'}"
                                         [disabled]="isDisabled"
                                         (click)="rechargetoggleConfirmation()">Confirmation</button>
-                                    <button type="button" class="btn2  recharge bttn" [disabled]="isRecharge"
+                                    <button type="button" class="btn2  recharge bttn me-2" [disabled]="isRecharge"
                                         [ngStyle]="{'background': isRecharge ? 'rgb(160 187 240)' : 'rgb(8, 79, 212)'}"
                                         (click)="recharge()">Recharge</button>
+                                    <button *ngIf="cancel_btn" type="button" class="btn2  bttn "
+                                        style="background-color: red;" (click)="toggleConfirmation()">Cancel</button>
                                 </div>
                             </div>
                         </div>
